Fix wrong font of select elements

--- a/app/assets/css/widgets/select.less
+++ b/app/assets/css/widgets/select.less
@@ -11,6 +11,7 @@
   display: block;
 
   > select {
+    font-family: 'Open Sans';
     .regular-grey-text-small;
     direction: rtl;
     padding: 0;
